perlin, more boards

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "ts-perlin-simplex": "^0.0.3"
   }
 }
