--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "moduleResolution": "node",
         "target": "es5",
         "allowJs": true,
+        "experimentalDecorators": true
     },
     "include": [
         "./src/**/*"
