--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "experimentalDecorators": true
     },
     "include": [
-        "./src/**/*"
+        "./src/**/*",
+        "./eslint.config.mjs"
     ]
 }
