--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/totalaj/dpp-mining-web#readme",
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@stylistic/eslint-plugin": "^2.12.1",
     "eslint": "^9.17.0",
     "globals": "^15.13.0",
     "html-webpack-plugin": "^5.6.3",
